--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* this is to resize the current weather icon */
 img{
     max-height:50px;
     max-width:50px;
@@ -5,6 +6,7 @@ img{
     width:auto;
 }
 
+/* this is to resize the icons for the 5 day forecasts */
 .icon{
     max-height:30px;
     max-width:30px;
